--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,45 +2,72 @@
 
 name: CI
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
+    tags:
+      - '*'
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  Build:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Build project
-        run: gradle build
-        
-      - uses: actions/upload-artifact@v2
-        with:
-          name: A
-          path: .
-  test:
+        run: gradle classes
+
+  Test:
       runs-on: ubuntu-latest
+      needs: Build
       steps:
         - uses: actions/checkout@v2
-        - uses: actions/download-artifact@v2
-          with:
-            name: A
-        
-        - name: Display contents
-          run: ls -R
           
         - name: Run test
           run: gradle test --tests GameTest
+
+        - uses: actions/upload-artifact@v2
+          with:
+              name: testReport
+              path: build/reports
+
+  Assemble:
+      runs-on: ubuntu-latest
+      needs: Test
+      outputs:
+        version: ${{ steps.getVersion.outputs.version }}
+
+      steps:
+        - uses: actions/checkout@v2
+
+        - name: Assemble
+          run: gradle jar
+
+        # Place after first gradle command
+        - id: getVersion
+          run: echo "::set-output name=version::$(gradle printVersion | head -n 3 | tail -n 1)"
+        
+        - uses: actions/upload-artifact@v2
+          with:
+              name: buildJar
+              path: build/libs/*.jar
+
+  Release:
+      if: startsWith(github.ref, 'refs/tags/')
+      runs-on: ubuntu-latest
+      needs: Assemble
+      steps:
+        - uses: actions/download-artifact@v2
+          name: buildJar
+        
+        - uses: softprops/action-gh-release@v1
+          with:
+            files: |
+              buildJar/st_nycu_lab4-${{ needs.Assemble.outputs.version }}.jar
+
+          env: 
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
