--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,18 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
+task printVersion {
+    doLast {
+        println project.version
+    }
+}
+
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.example.Main'
+    }
 }
